# sparql-connector

./: MANIFEST.in  README.md  pyproject.toml  requirements.build.txt  requirements.deploy.txt  setup.cfg  tox.ini
sparql2/: __init__.py  exception.py  n3_parser.py  query.py  result_set.py  service.py  service_base.py  sparql2.py
src/sparqlc/: __init__.py  datatypes.py  n3_parser.py  query.py  result_set.py  service.py  service_base.py  sparql-connect.py  version.py
test/: datatypes_test.py  exception_test.py  n3_parser_test.py  query_test.py  result_set_test.py  service_mixin_test.py
test/integration/: query_integration_test.py  readme_example_test.py
test/resources/: ask_result_negative.srx  ask_result_positive.srx
