[metadata]
name = sparql2
version = file: sparql2/version.txt
author = Vlastimil Chvojka
author_email = 9798475+vlastocom@users.noreply.github.com
description = SPARQL client based on sparql-client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vlastocom/sparql2
project_urls =
    Bug Tracker = https://github.com/vlastocom/sparql2/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = sparql2
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = sparql2

[tox:tox]
