[metadata]
name = sparql-connector
version = file: src/sparqlc/version.txt
author = Vlastimil Chvojka
author_email = 9798475+vlastocom@users.noreply.github.com
description = SPARQL connector based on sparql-client library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vlastocom/sparql-connector
project_urls =
    Bug Tracker = https://github.com/vlastocom/sparql-connector/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    overrides>=6.1.0
    python-dateutil==2.8.2
    urllib3==1.26.10

[options.packages.find]
where = src
